Update Backend/src/main/java/swp391/group6/component/SecurityConfig.java
Co-authored-by: ktokto313 <kto3132006@gmail.com>